--- a/maquetacion/nosotros.html
+++ b/maquetacion/nosotros.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="margin: 0;">
-    <div id="navbar" style="display: flex; border-bottom: 1px solid gray; padding: 14px 800px; justify-content: space-between;">
+    <div id="navbar" style="display: flex; border-bottom: 1px solid gray; padding: 14px 10em; justify-content: space-between;">
         <div id="navbar-left">
             <img src="technology-with-purpose.svg">
         </div>
@@ -21,5 +21,20 @@
             <button>Sumate +</button>
         </div>
     </div>
+    <div  id =" introducción " >
+
+    <div  id =" introducción-texto " >
+        <h1 > Somos una Fundación dedicada a mejorar la calidad de vida de las personas y su entorno, a través de la tecnología. </h1>
+    </div> 
+    <div  id ="introducción-acciones" >
+        <button style="width: 11em;"> Contactanos -> </button >
+        <button style="width: 11em;"> Sumate + </button >
+    </div> 
+    <div id="impacto" style=" background-color: #201b24; " >
+        <div">
+            <h1 style="color: white; font-size: 3em ;"> .Impacto</h1>
+        </div>
+    </div>
+
 </body>
 </html>
