--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="margin: 0;">
-    <div id="navbar" style="display: flex; border-bottom: 1px solid gray; padding: 14px 800px; justify-content: space-between;">
+    <div id="navbar" style="display: flex; border-bottom: 1px solid gray; padding: 14px 10em; justify-content: space-between;">
         <div id="navbar-left">
             <img src="technology-with-purpose.svg">
         </div>
@@ -25,23 +25,32 @@
             <button>Sumate +</button>
         </div>
     </div>
-    <div id="contact-form">
-        <form style="margin: 0 300px;" action="">
-            <div>
-                <input type="text" placeholder="Nombre y Apellido">
-                <input type="email" placeholder="Email">
-                <select name="" id="">
-                    <option value="">Programas</option>
-                    <option value="">Capacitaciones</option>
-                </select>
-            </div>
-            <div>
-                <textarea name="" cols="30" rows="10"></textarea>
-            </div>
-            <div>
-                <button>Enviar</button>
-            </div>
-        </form>
+    <div  id =" introducción " >
+
+    <div  id =" introducción-texto " >
+        <h1 > Somos una Fundación dedicada a mejorar la calidad de vida de las personas y su entorno, a través de la tecnología. </h1>
+    </div> 
+    <div  id ="introducción-acciones" >
+        <button id=contactenos > Contactanos -> </button >
+        <button id=sumate > Sumate + </button >
+    </div> 
+    <div id="impacto" style=" background-color: black; height: 13em; " >
+        <div">
+        <h1 id= "TextImpac"> .Impacto</h1>
+         <div id="ImpNum"; style=" display: flex ; align-items:first baseline;padding: 1em ;"> 
+            <p style=" color:white;margin-left: 10em; margin-right: 15em;;">Buscamos construir alianzas y fortalecer vínculos para generar una transformación real en la comunidad. Trabajamos para acercar la tecnología innovadora y disruptiva del sector privado hacia el sector social.</p>
+            <p style=" color:white;margin-right: 6; font-size: 2em;display: flex; align-items: self-end; font-weight: bold;"> 58</p>
+            <p style=" color:white;margin-right: 6; font-size: 2em;font-weight: bold">+50</p>
+            <p style=" color:white;font-size: 2em;font-weight: bold">301</p>
+        </div>
+        <div style="display: flex ; align-items:first baseline; margin-top: -4.8em;">
+            <p style="color: white; margin-left: 81em; font-size: 0.7em ;margin-right: 5em; ">Localidades </p>
+            <p style="color: white;font-size: 0.7em; margin-right: 5em; ">Mentores</p>
+            <p style="color: white;font-size: 0.7em;">Participantes</p>
+        </div>
+
     </div>
-</body>
+     <div id="foto">
+        <img src="Captura desde 2023-05-01 23-41-30.png" alt="">
+     </div>
 </html>
